# smile-classification

./: .dockerignore  .gitignore  Dockerfile.deploy  Dockerfile.predict  Dockerfile.train  README.md  predict.py  pyproject.toml  train.py
artifacts/deploy/: README.md
artifacts/inference/: README.md
artifacts/train/: README.md
artifacts/train/20260616_010059/: best-smile-weights.pt  best-smile.pt
configs/: deploy.yaml  inference.yaml  train.yaml
src/api/: app.py
src/datasets/: celeba_dataset.py
src/inference/: predictor.py
src/models/: cnn.py
src/training/: trainer.py
src/utils/: device.py  logging.py
